--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -1,89 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@color/yellow"
     android:padding="20dp"
-    android:background="@drawable/fgprofile"
     tools:context=".AddProductActivity">
 
     <TextView
+        android:id="@+id/tvAddProductTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="200dp"
         android:text="Add Product"
         android:textSize="38dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.112" />
 
-    <EditText
-        android:id="@+id/etProductName"
-        android:layout_width="match_parent"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewForm"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:hint="Product Name"
-        android:textColor="@color/dark_brown"
-        android:padding="12dp"
-        android:textSize="18sp" />
+        android:layout_marginTop="30dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="8dp"
+        app:layout_constraintTop_toBottomOf="@id/tvAddProductTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <EditText
-        android:id="@+id/etProductPrice"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:hint="Price"
-        android:textColor="@color/dark_brown"
-        android:padding="12dp"
-        android:inputType="number"
-        android:textSize="18sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background=""
+            android:padding="16dp">
 
-    <EditText
-        android:id="@+id/etProductDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:hint="Description"
-        android:textColor="@color/dark_brown"
-        android:padding="12dp"
-        android:textSize="18sp" />
+            <EditText
+                android:id="@+id/etProductName"
+                android:layout_width="300dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:hint="Product Name"
+                android:background="@color/light_yellow"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/dark_brown"
+                android:padding="12dp"
+                android:textSize="18sp" />
 
-    <!-- Image Preview -->
-    <ImageView
-        android:id="@+id/imgProduct"
-        android:layout_width="wrap_content"
-        android:layout_height="63dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_image_placeholder" />
+            <EditText
+                android:id="@+id/etProductPrice"
+                android:layout_width="300dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:background="@color/light_yellow"
+                android:layout_marginTop="10dp"
+                android:hint="Price"
+                android:textColor="@color/dark_brown"
+                android:inputType="number"
+                android:padding="12dp"
+                android:textSize="18sp" />
 
-    <!-- Button to Select Image -->
-    <Button
-        android:id="@+id/btnUploadImage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Upload Image"
-        android:textSize="18sp"
-        tools:ignore="TouchTargetSizeCheck" />
+            <EditText
+                android:id="@+id/etProductDescription"
+                android:layout_width="300dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:background="@color/light_yellow"
+                android:layout_marginTop="10dp"
+                android:hint="Description"
+                android:textColor="@color/dark_brown"
+                android:padding="12dp"
+                android:textSize="18sp" />
 
-    <Spinner
-        android:id="@+id/spinnerCategory"
-        android:layout_width="373dp"
-        android:layout_height="38dp"
-        android:textColor="@color/dark_brown"
-        android:layout_marginTop="10dp"
-        android:scrollbarSize="30sp"
-        tools:ignore="TouchTargetSizeCheck" />
+            <ImageView
+                android:id="@+id/imgProduct"
+                android:layout_width="wrap_content"
+                android:layout_height="63dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_image_placeholder" />
 
-    <Button
-        android:id="@+id/btnAddProduct"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Add Product"
-        android:textSize="20sp"
-        android:padding="12dp" />
+            <Button
+                android:id="@+id/btnUploadImage"
+                android:layout_width="300dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:text="Upload Image"
+                android:backgroundTint="@color/dark_orange"
+                android:textSize="20sp"
+                tools:ignore="TouchTargetSizeCheck" />
 
-</LinearLayout>
+            <Spinner
+                android:id="@+id/spinnerCategory"
+                android:layout_width="300dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="48dp"
+                android:textColor="@color/dark_brown"
+                android:background="@color/light_yellow"
+                android:layout_marginTop="10dp"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <Button
+                android:id="@+id/btnAddProduct"
+                android:layout_width="300dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="60dp"
+                android:layout_marginTop="15dp"
+                android:text="Add Product"
+                android:backgroundTint="@color/dark_orange"
+                android:textSize="20sp"
+                android:padding="12dp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
