--- a/app/src/main/res/layout/activity_admin_student_details.xml
+++ b/app/src/main/res/layout/activity_admin_student_details.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/yellow">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,9 +17,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Student Details Panel"
-            android:textSize="24sp"
+            android:textSize="32sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="50dp"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:layout_marginBottom="20dp"/>
 
         <!-- Order History -->
@@ -29,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:clickable="true"
+            android:layout_marginTop="50dp"
             android:focusable="true"
             app:cardCornerRadius="12dp"
             app:cardElevation="5dp">
@@ -64,6 +67,7 @@
             android:layout_marginBottom="12dp"
             android:clickable="true"
             android:focusable="true"
+            android:layout_marginTop="50dp"
             app:cardCornerRadius="12dp"
             app:cardElevation="5dp">
 
