--- a/app/src/main/res/layout/activity_change_password_student.xml
+++ b/app/src/main/res/layout/activity_change_password_student.xml
@@ -4,8 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="20dp"
-    android:background="@drawable/cngpassword"
+    android:background="@color/yellow"
     android:gravity="center">
+
+    <TextView
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:text="Change Password"
+        android:textColor="@color/white"
+        android:textSize="34dp"
+        android:textStyle="bold"/>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -16,7 +24,7 @@
     <EditText
     android:id="@+id/old_password"
     android:layout_width="300dp"
-        android:background="@android:drawable/editbox_background"
+        android:background="@color/light_yellow"
     android:layout_marginStart="40dp"
     android:layout_marginEnd="40dp"
     android:layout_height="48dp"
@@ -31,7 +39,7 @@
         android:layout_marginEnd="40dp"
         android:layout_height="48dp"
         android:layout_marginTop="120dp"
-        android:background="@android:drawable/editbox_background"
+        android:background="@color/light_yellow"
         android:hint="New Password"
         android:inputType="textPassword"/>
 
@@ -41,7 +49,7 @@
         android:layout_marginEnd="40dp"
         android:layout_width="300dp"
         android:layout_height="48dp"
-        android:background="@android:drawable/editbox_background"
+        android:background="@color/light_yellow"
         android:layout_marginTop="180dp"
         android:hint="Confirm Password"
         android:inputType="textPassword"/>
@@ -54,7 +62,7 @@
         android:textColor="@color/white"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="@color/dark_orange"
         android:layout_marginEnd="40dp"
         android:layout_marginTop="250dp"
         android:text="Change Password"/>
