--- a/app/src/main/res/layout/activity_delivery_details.xml
+++ b/app/src/main/res/layout/activity_delivery_details.xml
@@ -1,62 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/yellow"
     android:padding="16dp">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/tvnm"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="Delivery Details"
+        android:textColor="@color/white"
+        android:textSize="34dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/cardViewDetails"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tvCustomerName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Customer: John Doe"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewDetails"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="180dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginHorizontal="8dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="6dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:id="@+id/tvAddress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Address: 123 Main Street"
-            android:layout_marginTop="8dp" />
-
-        <TextView
-            android:id="@+id/tvItem"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Item: Grocery Package"
-            android:layout_marginTop="8dp" />
-
-        <TextView
-            android:id="@+id/tvStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Status: Out for Delivery"
-            android:layout_marginTop="8dp" />
-
-        <Button
-            android:id="@+id/btnStartDelivery"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Start Delivery"
-            android:layout_marginTop="24dp" />
-        <CheckBox
-            android:id="@+id/checkboxPicked"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="All Items Picked"
-            android:layout_marginTop="16dp" />
+            android:orientation="vertical"
+            android:padding="16dp">
 
-        <Button
-            android:id="@+id/btnMarkDelivered"
+            <TextView
+                android:id="@+id/tvCustomerName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Customer: John Doe"
+                android:textSize="22sp"
+                android:textColor="@color/dark_brown"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvAddress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textSize="18sp"
+                android:textColor="@color/dark_brown"
+                android:text="Address: 123 Main Street" />
+
+            <TextView
+                android:id="@+id/tvItem"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textSize="18sp"
+                android:textColor="@color/dark_brown"
+                android:text="Item: Grocery Package" />
+
+            <TextView
+                android:id="@+id/tvStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textSize="18sp"
+                android:textColor="@color/dark_brown"
+                android:text="Status: Out for Delivery" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewActions"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginHorizontal="8dp"
+        app:cardCornerRadius="16dp"
+        android:layout_marginTop="50dp"
+        app:cardElevation="6dp"
+        app:layout_constraintTop_toBottomOf="@id/cardViewDetails"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Mark as Delivered"
-            android:layout_marginTop="16dp" />
-    </LinearLayout>
-</ScrollView>
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <Button
+                android:id="@+id/btnStartDelivery"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/dark_orange"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:text="Start Delivery" />
+
+            <CheckBox
+                android:id="@+id/checkboxPicked"
+                android:layout_width="wrap_content"
+                android:textColor="@color/dark_brown"
+                android:textSize="18sp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="All Items Picked" />
+
+            <Button
+                android:id="@+id/btnMarkDelivered"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/dark_orange"
+                android:textSize="20sp"
+                android:layout_marginTop="16dp"
+                android:text="Mark as Delivered" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
