--- a/app/src/main/res/layout/activity_delivery_profile.xml
+++ b/app/src/main/res/layout/activity_delivery_profile.xml
@@ -1,72 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/yellow"
     android:padding="16dp">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <!-- Title -->
 
-        <TextView
-            android:text="Delivery Profile"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            android:layout_marginBottom="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+    <!-- CardView for Profile Fields -->
 
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="383dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="16dp"
+        android:text="Your Profile"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.071" />
 
-        <EditText
-            android:id="@+id/etName"
-            android:layout_width="match_parent"
-            android:hint="Name"
-            android:layout_height="48dp"
-            android:textColor="@color/black"
-            android:enabled="false" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardProfileInfo"
+        android:layout_width="0dp"
+        android:layout_height="350dp"
+        android:layout_marginTop="80dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="6dp"
+        app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-
-        <EditText
-            android:id="@+id/etPhone"
-            android:layout_width="match_parent"
-            android:textColor="@color/black"
-            android:hint="phone"
-            android:layout_height="48dp"
-            android:enabled="false" />
-
-
-        <EditText
-            android:id="@+id/etEmail"
-            android:layout_width="match_parent"
-            android:hint="Email"
-            android:textColor="@color/black"
-            android:layout_height="48dp"
-            android:enabled="false" />
-
-
-        <EditText
-            android:id="@+id/etDuty"
-            android:layout_width="match_parent"
-            android:textColor="@color/black"
-            android:hint="Duty"
-            android:layout_height="48dp"
-            android:enabled="false" />
-
-
-        <EditText
-            android:id="@+id/etLicense"
-            android:layout_width="match_parent"
-            android:textColor="@color/black"
-            android:layout_height="48dp"
-            android:hint="Enter driving license number" />
-
-        <Button
-            android:id="@+id/btnSave"
-            android:text="Save"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"/>
-    </LinearLayout>
+            android:padding="16dp">
 
-</ScrollView>
+            <EditText
+                android:id="@+id/etName"
+                android:layout_width="350dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_gravity="center"
+                android:layout_height="48dp"
+                android:background="@color/light_yellow"
+                android:hint="Name"
+                android:textColor="@color/dark_brown"
+                android:textSize="20sp"
+                android:enabled="false" />
+
+            <EditText
+                android:id="@+id/etPhone"
+                android:layout_width="350dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_gravity="center"
+                android:layout_height="48dp"
+                android:hint="Phone"
+                android:background="@color/light_yellow"
+                android:textSize="20sp"
+                android:textColor="@color/dark_brown"
+                android:layout_marginTop="15dp"
+                android:enabled="false" />
+
+            <EditText
+                android:id="@+id/etEmail"
+                android:layout_width="350dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_gravity="center"
+                android:layout_height="48dp"
+                android:hint="Email"
+                android:background="@color/light_yellow"
+                android:textSize="20sp"
+                android:textColor="@color/dark_brown"
+                android:layout_marginTop="15dp"
+                android:enabled="false" />
+
+            <EditText
+                android:id="@+id/etDuty"
+                android:layout_width="350dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_gravity="center"
+                android:background="@color/light_yellow"
+                android:layout_height="48dp"
+                android:hint="Duty"
+                android:textSize="20sp"
+                android:textColor="@color/dark_brown"
+                android:layout_marginTop="15dp"
+                android:enabled="false" />
+
+            <EditText
+                android:id="@+id/etLicense"
+                android:background="@color/light_yellow"
+                android:layout_width="350dp"
+                android:layout_marginLeft="20dp"
+                android:textSize="20sp"
+                android:layout_marginRight="20dp"
+                android:layout_gravity="center"
+                android:layout_height="48dp"
+                android:hint="Enter driving license number"
+                android:textColor="@color/dark_brown"
+                android:layout_marginTop="15dp" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <!-- Save Button CardView -->
+
+
+    <Button
+        android:id="@+id/btnSave"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/dark_orange"
+        android:padding="12dp"
+        android:text="Save"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardProfileInfo" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
