--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -1,59 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:padding="24dp"
-    android:background="@drawable/resetpass">
+    android:background="@color/yellow"
+    android:padding="16dp">
+
+    <!-- Title -->
+
+    <!-- Card View for form -->
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/tvResetTitle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="Reset Password"
-        android:layout_marginTop="100dp"
-        android:textSize="24sp"
-        android:textColor="@color/purple"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:layout_marginBottom="20dp"/>
-
-    <EditText
-        android:id="@+id/emailReset"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="Enter your registered email*"
-        android:padding="12dp"
-        android:textSize="20sp"
-        android:textColor="@color/black"
-        android:background="@android:drawable/editbox_background"
-        android:inputType="textEmailAddress"/>
-
-    <Button
-        android:id="@+id/resetPasswordButton"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Send Reset Link"
-        android:textSize="22sp"
-        android:backgroundTint="@color/purple"
         android:textColor="@color/white"
-        android:layout_marginTop="20dp"/>
-
-    <TextView
-        android:id="@+id/backToLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back to Login"
-        android:textColor="@color/purple"
-        android:textSize="20sp"
-        android:padding="16dp"
-        android:gravity="center"
+        android:textSize="32sp"
         android:textStyle="bold"
-        android:clickable="true"
-        android:focusable="true"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.14" />
 
-  </LinearLayout>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardResetForm"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="8dp"
+        app:layout_constraintTop_toBottomOf="@id/tvResetTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="24dp"
+            android:gravity="center_horizontal">
+
+            <EditText
+                android:id="@+id/emailReset"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:hint="Enter your registered email*"
+                android:padding="12dp"
+                android:textSize="20sp"
+                android:textColor="@color/dark_brown"
+                android:background="@color/light_yellow"
+                android:inputType="textEmailAddress"
+                android:layout_marginBottom="20dp"/>
+
+            <Button
+                android:id="@+id/resetPasswordButton"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="Send Reset Link"
+                android:textSize="20sp"
+                android:backgroundTint="@color/dark_orange"
+                android:textColor="@color/white"/>
+
+            <TextView
+                android:id="@+id/backToLogin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Back to Login"
+                android:textColor="@color/dark_brown"
+                android:textSize="20sp"
+                android:padding="16dp"
+                android:textStyle="bold"
+                android:layout_marginTop="8dp"
+                android:clickable="true"
+                android:focusable="true"/>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
