deliveryman registration from RegistrationPage,Delivery man registration done with validations, orderId also stored in delivery_otp table, delivery man login updated,Admin delivery man approval done,

--- a/app/src/main/res/layout/activity_admin_delivery_details.xml
+++ b/app/src/main/res/layout/activity_admin_delivery_details.xml
@@ -48,7 +48,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Register Delivery Men"
+                    android:text="Approve Delivery Men"
                     android:textSize="18sp"
                     android:layout_marginStart="12dp"/>
             </LinearLayout>
