--- a/app/src/main/res/layout/activity_registration_page.xml
+++ b/app/src/main/res/layout/activity_registration_page.xml
@@ -10,21 +10,23 @@
     tools:context=".MainActivity">
 
     <!-- Title -->
+
+    <!-- Card View -->
     <TextView
         android:id="@+id/registertext"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="Register"
-        android:textSize="40sp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
         android:textAlignment="center"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/white"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Card View -->
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="0dp"
@@ -41,7 +43,7 @@
         <!-- Inner Layout -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="655dp"
             android:padding="16dp">
 
             <!-- Full Name -->
@@ -56,9 +58,9 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/dark_brown"
                 android:textSize="16sp"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <!-- Email -->
             <EditText
@@ -73,9 +75,9 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/dark_brown"
                 android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@id/RName"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/RName" />
 
             <!-- ID -->
             <EditText
@@ -90,9 +92,9 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/dark_brown"
                 android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@id/REmail"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/REmail" />
 
             <!-- Phone No -->
             <EditText
@@ -107,9 +109,9 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/dark_brown"
                 android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@id/RId"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/RId" />
 
             <!-- Password -->
             <EditText
@@ -124,9 +126,9 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/dark_brown"
                 android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@id/Phoneno"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/Phoneno" />
 
             <!-- User Type -->
             <RadioGroup
@@ -134,29 +136,29 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:orientation="horizontal"
                 android:gravity="center"
-                app:layout_constraintTop_toBottomOf="@id/RPassword"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintTop_toBottomOf="@id/RPassword">
 
                 <RadioButton
                     android:id="@+id/radioStudent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Student"
+                    android:layout_marginEnd="40dp"
                     android:buttonTint="@color/light_yellow"
                     android:checked="true"
-                    android:textSize="16sp"
-                    android:layout_marginEnd="40dp" />
+                    android:text="Student"
+                    android:textSize="16sp" />
 
                 <RadioButton
                     android:id="@+id/radioVendor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:buttonTint="@color/light_yellow"
                     android:text="Vendor"
-                    android:textSize="16sp"
-                    android:buttonTint="@color/light_yellow" />
+                    android:textSize="16sp" />
             </RadioGroup>
 
             <!-- Shop Name (for Vendor) -->
@@ -165,15 +167,15 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="10dp"
-                android:hint="Enter Shop Name *"
-                android:visibility="gone"
                 android:background="@drawable/custom_edittext"
+                android:hint="Enter Shop Name *"
                 android:padding="8dp"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@id/userTypeGroup"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/userTypeGroup" />
 
             <!-- Register Button -->
             <Button
@@ -186,9 +188,9 @@
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 app:cornerRadius="20dp"
-                app:layout_constraintTop_toBottomOf="@id/shopName"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/shopName" />
 
             <!-- ProgressBar -->
             <ProgressBar
@@ -198,38 +200,56 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@id/RRegisterButton"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/RRegisterButton" />
 
             <!-- Login Text -->
+
+            <!-- Login Button -->
             <TextView
                 android:id="@+id/logintext"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="20dp"
                 android:text="Already have an account? Login now"
                 android:textAlignment="center"
                 android:textColor="@color/dark_brown"
                 android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@id/progressBar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/progressBar" />
 
-            <!-- Login Button -->
             <Button
                 android:id="@+id/RLoginButton"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="8dp"
                 android:backgroundTint="@color/dark_orange"
                 android:text="Login"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 app:cornerRadius="20dp"
-                app:layout_constraintTop_toBottomOf="@id/logintext"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/logintext" />
+
+            <TextView
+                android:id="@+id/register_del_men_text"
+                android:layout_width="224dp"
+                android:layout_height="52dp"
+                android:layout_marginTop="12dp"
+                android:clickable="true"
+                android:text="Register as Delivery Man"
+                android:textAlignment="center"
+                android:textColor="@color/dark_brown"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/RLoginButton" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
